--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <div>
+      <img src="img/1.webp" alt="">
+      <img src="img/2.jpg" alt="">
+      <img src="img/3.webp" alt="">
+    </div>
   </body>
 </html>
